feat: add extended C FFI/inline asm support, std net+encoding modules, and comprehensive tests
- implement parser/sema/codegen/runtime support for extended inline asm (colon operands, named operands, asm goto) and richer C FFI paths
- add std/net and std/net/socket, plus std/encoding packages (base32, base64, hex, json, toml, yaml)
- add backend server/stress and network/ffi/asm compile tests, and move legacy root .gs tests into test/

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,6 +17,15 @@ panic = "abort"
 
 [dependencies]
 libc = "0.2"
+socket2 = "0.5"
+
+[target.'cfg(windows)'.dependencies]
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
+tungstenite = { version = "0.24", default-features = false, features = ["handshake", "native-tls"] }
+
+[target.'cfg(not(windows))'.dependencies]
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
+tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }
 
 [build-dependencies]
 cc = "1.0"
