--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ hex = "0.4"
 directories = "5"
 fs2 = "0.4"
 strsim = "0.11"
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
