Add standard library modules for hashing, math, random number generation, HTTP requests, and more
- Implemented `hash` module with FNV-1a and CRC32 hashing functions.
- Created `math` module with utility functions for min, max, absolute value, floor, ceil, power, and logarithm.
- Added `rand` module for random number generation with state management.
- Developed `http` module for making HTTP requests with support for GET and POST methods.
- Introduced `testing` module for unit testing with assertion functions.
- Added `unicode` module for character classification functions.
- Implemented various tests for the new modules to ensure functionality and correctness.
- Removed unused functions and cleaned up code in existing modules.

--- a/.github/workflows/codegen-guardrails.yml
+++ b/.github/workflows/codegen-guardrails.yml
@@ -22,3 +22,7 @@ jobs:
       - name: Guard new codegen reject strings
         shell: pwsh
         run: ./scripts/check_codegen_reject_strings.ps1
+
+      - name: Guard invalid string compare LLVM emission
+        shell: pwsh
+        run: ./scripts/check_string_cmp_codegen.ps1
