--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ directories = "5"
 fs2 = "0.4"
 strsim = "0.11"
 unicode-ident = "1"
+semver = "1"
+ureq = "2"
+zip = { version = "2", default-features = false, features = ["deflate"] }
 
 [profile.release]
 opt-level = 3
